--- a/locallibrary/requirements.txt
+++ b/locallibrary/requirements.txt
@@ -6,16 +6,21 @@ certifi==2020.6.20
 chardet==3.0.4
 distlib==0.3.1
 Django==3.1.2
+django-environ==0.4.5
+environs==8.0.0
 filelock==3.0.12
 gunicorn==20.0.4
 idna==2.10
 isort==5.5.0
 lazy-object-proxy==1.4.3
+marshmallow==3.8.0
 mccabe==0.6.1
 pbr==5.5.0
 pipenv==2020.8.13
+psycopg2-binary==2.8.6
 pycodestyle==2.6.0
 pylint==2.6.0
+python-dotenv==0.15.0
 pytz==2020.1
 requests==2.24.0
 six==1.15.0
