--- a/locallibrary/requirements.txt
+++ b/locallibrary/requirements.txt
@@ -5,6 +5,7 @@ autopep8==1.5.4
 certifi==2020.6.20
 chardet==3.0.4
 distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.1.2
 django-environ==0.4.5
 environs==8.0.0
