--- a/locallibrary/requirements.txt
+++ b/locallibrary/requirements.txt
@@ -16,9 +16,11 @@ gunicorn==20.0.4
 idna==2.10
 importlib-metadata==2.0.0
 isort==5.5.0
+joblib==0.17.0
 lazy-object-proxy==1.4.3
 marshmallow==3.8.0
 mccabe==0.6.1
+numpy==1.19.4
 pbr==5.5.0
 Pillow==8.0.1
 pipenv==2020.8.13
@@ -28,9 +30,12 @@ pylint==2.6.0
 python-dotenv==0.15.0
 pytz==2020.1
 requests==2.24.0
+scikit-learn==0.23.2
+scipy==1.5.4
 six==1.15.0
 sqlparse==0.4.1
 stevedore==3.2.2
+threadpoolctl==2.1.0
 toml==0.10.1
 typed-ast==1.4.1
 urllib3==1.25.10
